recursion.cons.length.Length.scala.error
Erreur de compilation :
Length:6: error: value ++ is not a member of Int
    return(length(l.tail)++);
                         ^